--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
                 
                 <p class="mbr-text mbr-fonts-style display-7">
                     &nbsp; &nbsp; &nbsp; &nbsp;总和生育率 (TFR) 是女性在生育期（15-49 岁）的平均活产婴儿数。<br>
-                    &nbsp; &nbsp; &nbsp; &nbsp;越南2009-2019年的TFR数据结果趋于小幅波动，但总体上总和生育率处于稳定状态，等于或低于更替生育率 (范围从2.03到2.10个孩子/妇女）。<br> 
-                    &nbsp; &nbsp; &nbsp; &nbsp;这是越南实施人口和计划生育政策的良好结果，为了控制好人口增长符合国家经济发展的情况。与一些邻国相比，越南的总生育率低于老挝。在十年来，老挝的总生育率直线下降（从3.23 到 2.63 孩子\妇女），但由于经济还落后和教育水平还低，老挝的总和生育率还高于越南，也高于世界平均总和生育率。<br>
+                    &nbsp; &nbsp; &nbsp; &nbsp;越南2009-2019年的TFR数据结果趋于小幅波动，但总体上总和生育率处于稳定状态，等于或低于更替生育率 (范围从2.03到2.10个孩子/妇女）。这是越南实施人口和计划生育政策的良好结果，为了控制好人口增长符合国家经济发展的情况。与一些邻国相比，越南的总生育率低于老挝。在十年来，老挝的总生育率直线下降（从3.23 到 2.63 孩子\妇女），但由于经济还落后和教育水平还低，老挝的总和生育率还高于越南，也高于世界平均总和生育率。<br>
                     &nbsp; &nbsp; &nbsp; &nbsp;与中国相比，越南的TFR处于较高水平。 这十年中国的TFR增长缓慢，始终保持在较低的水平1点。这个数字远低于越南和世界平均总和生育率，主要原因由于中国“一对夫妇生育一个孩子”政策的后果与中国经济的快速发展给年经人带来了很多压力。<br>
                     &nbsp; &nbsp; &nbsp; &nbsp;与世界平均总和生育率相比，越南的总和生育率较低一点， 但是总体来看越南的总和生育率在世界范围内还是属于一个正常的状态。
                 </p>
@@ -214,7 +213,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-9">
-                    <h4 class="" style="font-size: 25px;">
+                    <h4 class="" style="font-size: 25px; text-align: center;">
                         <strong>全国、城乡的总和生育率 </strong>
                     </h4> 
                     <br>
