--- a/page21.html
+++ b/page21.html
@@ -57,7 +57,7 @@
             <div class="col-12 col-md-10">
                 <blockquote>
                 
-                <p class="mbr-text mbr-fonts-style display-4">参考资料 ：<br>[1] 越南新闻网站<br>https://consosukien.vn/mu-c-sinh-o-vie-t-nam-nhan-to-ta-c-do-ng-de-n-tang-truo-ng-dan-so.htm<br>[2] 越南统计总局 （2021）。《2019年全国人口普查：越南生育的现状和影响因素》。<br>https://baochinhphu.vn/buc-tranh-tong-the-ve-thuc-trang-muc-sinh-o-viet-nam-102273967.htm<br></p></blockquote>
+                <p class="mbr-text mbr-fonts-style display-4">参考资料 ：<br>[1] 越南新闻网站<br>https://consosukien.vn/mu-c-sinh-o-vie-t-nam-nhan-to-ta-c-do-ng-de-n-tang-truo-ng-dan-so.htm<br>https://baochinhphu.vn/buc-tranh-tong-the-ve-thuc-trang-muc-sinh-o-viet-nam-102273967.htm<br>[2] 越南统计总局 （2021）。《2019年全国人口普查：越南生育的现状和影响因素》。</p></blockquote>
             </div>
         </div>
     </div>
