--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         <div class="row justify-content-center">
             <div class="col-10 col-lg-7">
                 <div class="image-wrapper">
-                    <img src="assets/images/hinh45.jpg" alt="Mobirise Website Builder">
+                    <img src="assets/images/Untitled-3.jpg" alt="Mobirise Website Builder">
                     
                 </div>
             </div>
