--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="align-center container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-7">
-                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-2"><strong>越南人口生育率</strong></h1>
+                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>越南人口生育率</strong></h1>
                 
                 <p class="mbr-text mbr-white mbr-fonts-style display-7"><strong>
                     &nbsp; &nbsp; &nbsp; &nbsp;越南位于东南亚中南半岛东南端，三面环海，地形狭长，呈S型，面积约33万平方公里，海岸线长3260多公里，北与中国广西、云南接壤，西与老挝、柬埔寨交界。<br>
@@ -108,7 +108,7 @@
 </section>
 <!--mục 1-->
 <section data-bs-version="5.1" class="header12 cid-t85G0o6LiX" id="header12-a2">
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(250, 250, 250);">
+    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(255, 255, 255);">
     </div>
     <div class="container-fluid">
         <div class="row justify-content-center">
@@ -150,7 +150,7 @@
 </section>
 <!--mục 2-->
 <section data-bs-version="5.1" class="header12 cid-t85GM5kl7P" id="header12-a7">
-    <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(250, 250, 250);">
+    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(250, 250, 250);">
     </div>
     <div class="container-fluid">
         <div class="row justify-content-center">
@@ -245,8 +245,8 @@
     </div>
 </section>
 <!--Mục 3-->
-<section data-bs-version="5.1" class="header12 cid-t85GX7KeX1" id="header12-ag">
-    <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(250, 250, 250);">
+<section data-bs-version="5.1" class="header12 cid-t85GX7KeT1" id="header12-ag">
+    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(250, 250, 250);">
     </div>
     <div class="container-fluid">
         <div class="row justify-content-center">
@@ -290,7 +290,7 @@
 <!--Muc4-->
 
 <section data-bs-version="5.1" class="header12 cid-t85GX7KeX1" id="header12-ag1">
-    <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(250, 250, 250);">
+    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(255, 255, 255);">
     </div>
     <div class="container-fluid">
         <div class="row justify-content-center">
@@ -339,7 +339,7 @@
 <!--Muc5-->
 
 <section data-bs-version="5.1" class="header12 cid-t85H2TAQ4M" id="header12-al">
-    <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(250, 250, 250);">
+    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(250, 250, 250);">
     </div>
     <div class="container-fluid">
         <div class="row justify-content-center">
