--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <p class="mbr-text mbr-fonts-style display-7">
                     &nbsp; &nbsp; &nbsp; &nbsp;根据2019年人口普查结果，越南中游和北部山地地区和西原地区生育率偏高，均为2.43。东南部地区的生育率偏低，为1.56。<br>
                     &nbsp; &nbsp; &nbsp; &nbsp;1989-2019年人口普查结果显示，全国大部分地区生育率呈下降趋势。 其中，西原地区、中游和北部山地地区、九龙江三角洲地区生育率下降最明显。西原地区的生育率在过去30年减少了一半以上，从 5.97下降至 2.43。 <br>
-                    &nbsp; &nbsp; &nbsp; &nbsp;东南部和红河三角洲是越南经济最发达的两个地区，这两个地区的生育率存在差异。东南部地区生育率在过去 30 年中持续下降，从2.9下降至1.56 孩。红河三角洲地区先是从 3.11 下降至 1.98，随后在 1999-2019 年又有所上升。<br>
+                    &nbsp; &nbsp; &nbsp; &nbsp;东南部和红河三角洲是越南经济最发达的两个地区，这两个地区的生育率存在差异。东南部地区生育率在过去 30 年中持续下降，从2.9下降至1.56。红河三角洲地区先是从 3.11 下降至 1.98，随后在 1999-2019 年又有所上升。<br>
                     &nbsp; &nbsp; &nbsp; &nbsp;生育率波动的原因有多种因素，包括移民、生育文化、少数民族、经济发展水平等。移民往往是育龄人群，这也是西原地区、九龙江三角洲等向外移民人数多的地区生育率下降的原因之一。
                 </p>
             </div>
