--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7">作者：阮氏明月<br>指导老师：白净 教授<br>南京大学 | 新闻传播学院 | 数据新闻｜&nbsp;<a href="page21.html" class="text-white" target="_blank">参考资料</a><br>© Copyright 2022 Mingyue - All Rights Reserved
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">作者：阮氏明月<br>指导老师：白净 教授<br>南京大学 | 新闻传播学院 | 数据新闻｜&nbsp;<a href="page21.html" class="text-white" target="_blank">参考资料</a><br>© Copyright 2022 MingYue - All Rights Reserved
                 </p>
             </div>
         </div>
